# SMCUF

./: .gitignore  CMakeLists.txt  README.md  cmd.sh  flash.sh  main.c
.cache/clangd/index/: main.c.7E7D3C7BD7FF6B35.idx
include/: mcu.h  nano.c  nano.h
